Changed config lib,updated to 1.21.4, removed underwater vision